Bug 1761850 - Fix wasm select on ARM64. r=jseward a=dmeehan

JSOpToCondition is applicable only to integer types. JSOpToDoubleCondition and
ConditionFromDoubleCondition sequence has to be used for float types.

Differential Revision: https://phabricator.services.mozilla.com/D142288